# Logic-Simulator

./: .gitignore  CMakeLists.txt  compile_commands.json  neovim.json
src/: main.cpp
